1.1.90 (1.2 beta1)
==================

[1] Added a JNI wrapper for TurboJPEG/OSS.  See java/README for more details.


1.1.0
=====

[1] Since the fast integer forward DCT seems to degrade for JPEG qualities
greater than 95, TurboJPEG/OSS will now automatically use the slow integer
forward DCT when generating JPEG images of quality 96 or greater.  This
reduces compression performance by as much as 15% for these high-quality images
but is necessary to ensure that the images are perceptually lossless.


1.0.90 (1.1 beta1)
==================

[1] Added emulation of the libjpeg v7 and v8b APIs and ABIs.  See
README-turbo.txt for more details.  This feature was sponsored by CamTrace SAS.

[2] Created a new CMake-based build system for the Visual C++ and MinGW builds.

[3] TurboJPEG/OSS can now compress from/decompress to grayscale bitmaps.

[4] jpgtest can now be used to test decompression performance with existing
JPEG images.

[5] If the default install prefix (/opt/libjpeg-turbo) is used, then
'make install' now creates /opt/libjpeg-turbo/lib32 and
/opt/libjpeg-turbo/lib64 sym links to duplicate the behavior of the binary
packages.

[6] All symbols in the libjpeg-turbo dynamic library are now versioned, even
when the library is built with libjpeg v6b emulation.

[7] Added arithmetic encoding and decoding support (can be disabled with
configure or CMake options)

[8] Added a TJ_YUV flag to TurboJPEG/OSS which causes both the compressor and
decompressor to output planar YUV images.

[9] Added an extended version of tjDecompressHeader() to TurboJPEG/OSS which
allows the caller to determine the type of subsampling used in a JPEG image.

[10] Added further protections against invalid Huffman codes.


1.0.1
=====

[1] The Huffman decoder will now handle erroneous Huffman codes (for instance,
from a corrupt JPEG image.)  Previously, these would cause libjpeg-turbo to
crash under certain circumstances.
